Correcciones en login y registro. Se añadio opcion recuperar cuenta

--- a/src/app/componentes/iniciar-sesion/acceso-negado/acceso-negado.component.html
+++ b/src/app/componentes/iniciar-sesion/acceso-negado/acceso-negado.component.html
@@ -8,7 +8,7 @@
       <div id="error_detalle">
         <h4>
           Por cuestiones de seguridad no tenes permitido realizar tu última acción.
-          Por favor volve a ingresar con tu usuario para acceder nuevamente a la aplicación.
+          Por favor volve a ingresar con tu usuario para acceder a la aplicación.
         </h4>
       </div>
     </div>
