Correcciones en recuperar cuenta

--- a/src/app/componentes/registrarse/reset/reset.component.html
+++ b/src/app/componentes/registrarse/reset/reset.component.html
@@ -40,7 +40,7 @@
     <div id="formFooter">
       <div class="cuenta-registro">
         <p>¿Ya estás registrado?</p>
-        <a routerLink="/iniciar-sesion">Hacé click aquí.</a>
+        <a routerLink="/iniciar-sesion">Hacé clic aquí.</a>
       </div>
       <a
         class="underlineHover"
