Cambios en el navbar

--- a/src/app/componentes/encabezado/encabezado.component.html
+++ b/src/app/componentes/encabezado/encabezado.component.html
@@ -18,21 +18,25 @@
     <ul>
       <li style="margin-left: 70px; margin-top: 7.5px">
         <a href="{{ persona.linkFacebook }}" target="_blank"
+        title="Visita mi perfil en Facebook"
           ><i class="fa fa-lg fa-facebook"></i
         ></a>
       </li>
       <li>
         <a href="{{ persona.linkGithub }}" target="_blank"
+        title="Visita mi perfil en GitHub"
           ><i class="fa fa-lg fa-github"></i
         ></a>
       </li>
       <li>
         <a href="{{ persona.linkLinkedin }}" target="_blank"
+        title="Visita mi perfil en Linkedin"
           ><i class="fa fa-lg fa-linkedin"></i
         ></a>
       </li>
       <li>
         <a href="{{ persona.linkInstagram }}" target="_blank"
+        title="Visita mi perfil en Instagram"
           ><i class="fa fa-lg fa-instagram"></i
         ></a>
       </li>
