--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -8,6 +8,8 @@
     z-index: 1020;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
       #0000004d 0px 3px 7px -3px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
   "
 >
   <div class="container-fluid">
