Ultimas correcciones del proyecto localhost

--- a/src/app/componentes/iniciar-sesion/registro-exitoso/registro-exitoso.component.html
+++ b/src/app/componentes/iniciar-sesion/registro-exitoso/registro-exitoso.component.html
@@ -12,7 +12,7 @@
       <div id="registro_detalle">
         <h4>
           ¡Bienvenido a nuestra comunidad! Estamos felices que formes parte de
-          #YoProgramo. Te vamos a direccionar a la pagina de inicio para que
+          #YoProgramo. Te vamos a direccionar a la página de inicio para que
           ingreses con tu nuevo usuario.
         </h4>
       </div>
