--- a/src/app/componentes/proyectos/nuevo-proyecto/nuevo-proyecto.component.html
+++ b/src/app/componentes/proyectos/nuevo-proyecto/nuevo-proyecto.component.html
@@ -122,7 +122,7 @@
           id="linkProyecto"
           [(ngModel)]="proyectos.linkProyecto"
           name="linkProyecto"
-          placeholder="Escriba el link del sitio donde se encuentra el proyecto"
+          placeholder="Escriba el link del sitio donde se encuentra el proyecto, NO ES OBLIGATORIO"
           #linkProyecto="ngModel"
         />
       </div>
